# notion_solvery

./: app.py  celerybeat-schedule.db  config.py  make_celery.py  pyproject.toml
backend/: db.py  models.py  schema.py  tasks.py  urls.py  views.py
backend/helpers/: collect_pages_for_removing.py  logger_settings.py  notion_tracking.py  parse_bookmarks.py
chrome_extension/: .background_script.js.un~  background_script.js  manifest.json
migrations/versions/: 050e2c5831c9_.py
